<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="co.onsori.balasandroid.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="60000px"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/balaslogo"
            />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar2"
            android:scaleX="-1"
            android:layout_weight="0.08" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:text="@string/weight_text"
            android:id="@+id/text_view"
            android:gravity="center"
            android:textSize="50dp"
            android:textStyle="bold"
            />



    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar1"
        android:layout_weight="0.08" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <view
            class="co.onsori.balasandroid.LEDControl"
            android:text="ToggleButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/led_0" />

        <view
            class="co.onsori.balasandroid.LEDControl"
            android:text="ToggleButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/led_1" />

        <view
            class="co.onsori.balasandroid.LEDControl"
            android:text="ToggleButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/led_2" />

        <view
            class="co.onsori.balasandroid.LEDControl"
            android:text="ToggleButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/led_3" />

    </LinearLayout>

        <!-- Creation of Button 1 -->

        <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sub_title"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_1"
                    android:paddingRight="8sp"
                    />
            </LinearLayout>

            <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_pressed"
                    android:id="@+id/button1"
                    />
            </LinearLayout>
        </LinearLayout>

        <!-- Creation of Button 2 -->

        <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sub_title"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_2"
                    android:paddingRight="8sp"
                    />
            </LinearLayout>

            <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_pressed"
                    android:id="@+id/button2"
                    />
            </LinearLayout>
        </LinearLayout>

        <!-- Creation of Button 3 -->

        <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sub_title"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_3"
                    android:paddingRight="8sp"
                    />
            </LinearLayout>

            <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_pressed"
                    android:id="@+id/button3"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <!-- Creation of Button 4 -->

        <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/sub_title"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_4"
                    android:paddingRight="8sp"
                    />
            </LinearLayout>

            <LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_pressed"
                    android:id="@+id/button4"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_button" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recieve_button" />
        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
